Nearly Finished with Milestone 3, Updating project name to reflect that shortly